clusters/cluster0/kubernetes/apps/kagent/kagent/app/kagent-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kagent
  namespace: kagent
spec:
  hostnames:
  - kagent.biggs.dog
  parentRefs:
  - name: wildcard-biggs-dog
    namespace: networking
  rules:
  - backendRefs:
    - name: kagent-ui
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
